--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main>
       <section
         id="videos"
-        class="w-11/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 py-10"
+        class="w-11/12 mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5 py-10"
       ></section>
     </main>
 
