--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PHTube</title>
+    <title>PH Tube</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
@@ -25,7 +25,7 @@
   <body>
     <header>
       <nav
-        class="w-11/12 mx-auto py-3 flex justify-between items-center border-b"
+        class="w-11/12 mx-auto py-3 flex flex-col sm:flex-row gap-5 justify-between items-center border-b"
       >
         <div class="logo w-[100px]">
           <img src="./assets/Logo.png" alt="" />
